# microfips

./: .fips-upstream.json  .gitignore  AGENTS.md  Cargo.toml  README.md  keys.json
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/fips-decrypt/: Cargo.toml
crates/fips-decrypt/src/: main.rs
crates/microfips/: Cargo.toml
crates/microfips-core/: Cargo.toml
crates/microfips-core/src/: fsp.rs  hex.rs  identity.rs  lib.rs  noise.rs  wire.rs
crates/microfips-core/src/mmp/: algorithms.rs  mod.rs  report.rs
crates/microfips-core/tests/: error_injection.rs  fips_compatibility.rs  fips_wire_format.rs  fsp_over_fmp.rs  pcap_regression.rs
crates/microfips-esp-common/: Cargo.toml
crates/microfips-esp-common/src/: dns.rs  lib.rs  stats.rs  udp_transport.rs
crates/microfips-esp-transport/: Cargo.toml  build.rs
crates/microfips-esp-transport/src/: ble_host.rs  config.rs  control.rs  esp_now_transport.rs  heap.rs  l2cap_host.rs  lib.rs  logger.rs  lr2021_framing.rs  lr2021_spi.rs  lr2021_transport.rs  run_tasks.rs  runner.rs  wifi_transport.rs
crates/microfips-esp32-component/: Cargo.toml  README.md
crates/microfips-esp32-component/docs/: PROTOCOL_AUDIT.md
crates/microfips-esp32-component/esp-idf/: CMakeLists.txt  idf_component.yml
crates/microfips-esp32-component/examples/uart-leaf/: Cargo.toml  rust-toolchain.toml
crates/microfips-esp32-component/examples/uart-leaf/.cargo/: config.toml
crates/microfips-esp32-component/examples/uart-leaf/src/: main.rs
crates/microfips-esp32-component/platformio/: library.json  library.properties
crates/microfips-esp32-component/platformio/scripts/: build_rust.py
crates/microfips-esp32-component/src/: lib.rs
crates/microfips-esp32/src/: config.rs  run.rs
crates/microfips-esp32c3/: Cargo.toml  build.rs  memory.x
crates/microfips-esp32c3/.cargo/: config.toml
crates/microfips-esp32c3/src/: lib.rs  run.rs
crates/microfips-esp32s3/: Cargo.toml
crates/microfips-esp32s3/src/: config.rs  run.rs
crates/microfips-http-demo/src/: lib.rs
crates/microfips-l2cap-test/: Cargo.toml
crates/microfips-l2cap-test/src/: lib.rs
crates/microfips-link/src/: main.rs
crates/microfips-lr2021-test/: Cargo.toml
crates/microfips-lr2021-test/src/: lib.rs
crates/microfips-protocol/src/: fsp_handler.rs  node.rs  peer_policy.rs  transport.rs
crates/microfips-protocol/src/mmp/: metrics.rs  mod.rs  peer_state.rs  receiver.rs  stats.rs
crates/microfips-protocol/src/transport/: scripted.rs
crates/microfips-service/src/: lib.rs
crates/microfips/src/: board_f469.rs  board_f746.rs  cdc_transport.rs  display.rs  main.rs
docs/: INTEGRATION-ASSESSMENT.md  device-identity.md  madeira-discussion-prep.md  microfips-master-plan.md  plan-espnow-fips-mesh.md  strategy-and-upstream.md  v2-protocol-tracking.md
labgrid/tests/: test_esp32_ble.py  test_esp32_l2cap.py  test_esp32_uart.py
