[workspace]
members = ["crates/microfips-build", "crates/microfips-core", "crates/microfips-link", "crates/microfips-sim", "crates/microfips", "crates/microfips-protocol", "crates/microfips-service", "crates/microfips-http-demo", "crates/microfips-http-test", "crates/microfips-esp32", "crates/fips-decrypt", "crates/microfips-esp32s3", "crates/microfips-esp32c3", "crates/microfips-esp-common", "crates/microfips-esp-transport", "crates/microfips-l2cap-test"]
resolver = "2"

[workspace.metadata.esp32]
runner = "espflash flash --monitor -p /dev/ttyUSB0 --chip esp32"

[profile.release.package.esp-radio]
opt-level = 3

[workspace.dependencies]
embassy-time = "0.5.1"
embassy-futures = "0.1.2"
embassy-executor = "0.10"
embassy-sync = "0.8"
embedded-io-async = "0.7"
heapless = "0.9"
static_cell = "2"
esp-hal = "1.1.0"
esp-rtos = "0.3.0"
esp-bootloader-esp-idf = "0.5"
esp-radio = { version = "0.18.0", default-features = false }
esp-alloc = "0.10"
bt-hci = "0.8"
embedded-io = "0.7"
esp-println = { version = "0.17.0", default-features = false }
log = "0.4"
rand_core = { version = "0.6", default-features = false }
embassy-net = "0.9.0"
trouble-host = { git = "https://github.com/embassy-rs/trouble", rev = "c103e97ff7d333c2cb76b643477e3c4141d0ff74", features = ["default-packet-pool", "scan", "central"] }
microfips-build = { path = "crates/microfips-build" }
critical-section = { version = "1.1.2" }

