[package]
name = "fips-decrypt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
hex = "0.4"
log = "0.4"
microfips-core = { path = "../microfips-core", features = ["std"] }
pcap-file = "2"
serde_json = "1"

[build-dependencies]
microfips-build = { path = "../microfips-build" }
