[package]
name = "microfips-core"
version = "0.1.0"
edition = "2021"
description = "FIPS protocol core: SLIP, identity, Noise, wire format (no_std)"
autotests = false

[build-dependencies]
microfips-build = { path = "../microfips-build" }

[dependencies]
sha2 = { version = "0.10", default-features = false, features = ["oid"] }
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "ecdsa", "ecdh"] }
chacha20poly1305 = { version = "0.10", default-features = false }
hkdf = { version = "0.12", default-features = false }
hmac = { version = "0.13", default-features = false }
hex = { version = "0.4", optional = true }
log = { version = "0.4", optional = true }

[dev-dependencies]
hex = "0.4"
rand = "0.9"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[test]]
name = "error_injection"
path = "tests/error_injection.rs"

[[test]]
name = "fips_compatibility"
path = "tests/fips_compatibility.rs"

[[test]]
name = "fips_wire_format"
path = "tests/fips_wire_format.rs"

[[test]]
name = "fsp_edge_cases"
path = "tests/fsp_edge_cases.rs"

[[test]]
name = "fsp_over_fmp"
path = "tests/fsp_over_fmp.rs"

[[test]]
name = "golden_vectors"
path = "tests/golden_vectors.rs"

[[test]]
name = "pcap_regression"
path = "tests/pcap_regression.rs"

[features]
default = []
std = ["sha2/std", "k256/std", "chacha20poly1305/std", "hkdf/std", "hex", "log"]
log = ["dep:log"]
