[package]
name = "microfips-esp32c3"
version = "0.1.0"
edition = "2021"
description = "Minimal FIPS leaf node on ESP32-C3"

[lib]
name = "microfips_esp32c3"

[features]
default = ["wifi"]
ble = ["dep:esp-radio", "dep:trouble-host", "dep:bt-hci", "dep:embedded-io", "dep:esp-println", "dep:log", "microfips-esp-transport/ble"]
l2cap = ["dep:esp-radio", "dep:trouble-host", "dep:bt-hci", "dep:embedded-io", "dep:esp-println", "dep:log", "microfips-esp-transport/l2cap"]
wifi = ["dep:esp-radio", "dep:esp-println", "dep:log", "microfips-esp-transport/wifi"]
esp-now = ["dep:esp-radio", "dep:esp-println", "dep:log", "microfips-esp-transport/esp-now"]

[[bin]]
name = "microfips-esp32c3-uart"
path = "src/bin/uart.rs"

[[bin]]
name = "microfips-esp32c3-ble"
path = "src/bin/ble.rs"
required-features = ["ble"]

[[bin]]
name = "microfips-esp32c3-l2cap"
path = "src/bin/l2cap.rs"
required-features = ["l2cap"]

[[bin]]
name = "microfips-esp32c3-wifi"
path = "src/bin/wifi.rs"
required-features = ["wifi"]

[[bin]]
name = "microfips-esp32c3-esp-now"
path = "src/bin/esp-now.rs"
required-features = ["esp-now"]

[dependencies]
microfips-core = { path = "../microfips-core", features = ["log"] }
microfips-esp-common = { path = "../microfips-esp-common" }
microfips-esp-transport = { path = "../microfips-esp-transport", features = ["esp32c3"] }
microfips-http-demo = { path = "../microfips-http-demo" }
microfips-protocol = { path = "../microfips-protocol", features = ["log"] }
microfips-service = { path = "../microfips-service" }
rand_core = { workspace = true }
esp-hal = { workspace = true, features = ["esp32c3", "unstable"] }
esp-rtos = { workspace = true, features = ["esp32c3", "embassy", "esp-alloc", "esp-radio"] }
esp-bootloader-esp-idf = { workspace = true, features = ["esp32c3"] }
embassy-time = { workspace = true }
embassy-futures = { workspace = true }
embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embedded-io-async = { workspace = true }
heapless = { workspace = true }
static_cell = { workspace = true }
esp-radio = { workspace = true, features = ["esp32c3", "ble", "wifi", "esp-now", "unstable"], optional = true }
trouble-host = { workspace = true, optional = true }
esp-alloc = { workspace = true }
bt-hci = { workspace = true, features = ["uuid"], optional = true }
embedded-io = { workspace = true, optional = true }
esp-println = { workspace = true, features = ["esp32c3", "jtag-serial"], optional = true }
log = { workspace = true, optional = true }

[build-dependencies]
microfips-build = { workspace = true }