[package]
name = "microfips"
version = "0.1.0"
edition = "2021"
description = "Minimal FIPS leaf node on STM32F469I-DISCO"

[features]
default = ["board-f469"]
board-f469 = [
    "embassy-stm32/stm32f469ni",
    "dep:embassy-stm32f469i-disco",
]
board-f746 = ["embassy-stm32/stm32f746ng"]
display = [
    "embassy-stm32f469i-disco/display",
    "dep:embedded-graphics",
]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "dep:panic-probe",
    "embassy-stm32/defmt",
    "embassy-usb/defmt",
    "embassy-usb-synopsys-otg/defmt",
    "embassy-executor/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-sync/defmt",
]

[dependencies]
microfips-core = { path = "../microfips-core" }
microfips-http-demo = { path = "../microfips-http-demo" }
microfips-protocol = { path = "../microfips-protocol" }
microfips-service = { path = "../microfips-service" }
rand_core = { version = "0.6", default-features = false }
embassy-stm32 = { version = "0.6.0", features = [
    "unstable-pac",
    "memory-x",
    "time-driver-any",
    "exti",
] }
embassy-usb = { version = "0.6.0" }
embassy-usb-synopsys-otg = { version = "0.3.2" }
embassy-executor = { version = "0.10.0", features = [
    "platform-cortex-m",
    "executor-thread",
    "executor-interrupt",
] }
embassy-time = { version = "0.5.1", features = [
    "tick-hz-32_768",
] }
embassy-sync = { version = "0.8.0" }
embassy-futures = { version = "0.1.2" }

defmt = { version = "1.1", optional = true }
defmt-rtt = { version = "1.0", optional = true }
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
panic-halt = "1.0.0"
panic-probe = { version = "1.0", features = ["print-defmt"], optional = true }
heapless = "0.9"
static_cell = "2"

# Display (via BSP git dep)
embedded-graphics = { version = "0.8", optional = true }
embassy-stm32f469i-disco = { git = "https://github.com/Amperstrand/embassy-stm32f469i-disco", rev = "365bdff", default-features = false, features = ["display", "touch"], optional = true }
